--- a/WebApp/dashboard.css
+++ b/WebApp/dashboard.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     margin-top: 16px;
-    margin-bottom: 150px;
+    margin-bottom: 50px;
 }
 
 .song-card {
